# aks-cluster-suffix

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml  release.yml  test.yml
crates/aks-cluster-suffix/: Cargo.toml
crates/aks-cluster-suffix-bin/: Cargo.toml
crates/aks-cluster-suffix-bin/src/: main.rs
crates/aks-cluster-suffix-bin/tests/: integration.rs
crates/aks-cluster-suffix/src/: lib.rs  lookup.rs  main.rs  suffix.rs
