[package]
name = "aks-cluster-suffix-bin"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A tool for generating the Azure Kubernetes Service (AKS) cluster suffix."
repository = "https://github.com/dbalcomb/aks-cluster-suffix"
license = "MIT OR Apache-2.0"
edition = "2018"
autobins = false

[dependencies]
aks-cluster-suffix = { path = "../aks-cluster-suffix" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.12"

[[bin]]
name = "aks-cluster-suffix"
path = "src/main.rs"
